First Update Jan 25th

--- a/Projects/Project-01/index-1.html
+++ b/Projects/Project-01/index-1.html
@@ -2,19 +2,29 @@
 
 <html>
 	<head>
-		<title>Project 1 All HTML</title>
+		<title>Bold Tag</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	
 	<body>
 
-		<div class="main">
+        <div class="main"> </div>
 
-			<h1>All HTML</h1>
-				
-				
-		</div>
+        <h1><marquee behavior="scroll" direction="left" scrollamount="10" width="1500"> <font size="100" color=bluedark face="monaco">*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*BOLD/TAG*</font></marquee></h1>
+				 <body>
+      <h1><font size="6" color=bluedark face="monaco">Let's Discuss the BOLD tag</font></h1>
+      <p><font size="4" color=skyblue face="monaco">This page focuses on the <strong>bold</strong> tag  and <strong>strong </strong> tag in HTML.</font></p>
+      <p><font size="4" color=skyblue face="monaco">To bold the text in HTML, use either the <strong>strong tag</strong> or the <b>b (bold) tag</b>. Browsers will bold the text inside both of these tags the same, but the strong tag indicates that the text is of particular importance or urgency. You can also bold text with the CSS font-weight property set to “bold.”</font></p>
+      <p> <font size="4" color=skyblue face="verdana">This is what the tags look like in syntax:</font></p>
+      <marquee direction="left" scrollamount="10"><img width="540" src="images/Strong%20Tag.png"></marquee><br>
+      <marquee direction="right" scrollamount="10"><img width="500" src="images/Bold%20tag.png"></marquee><br>
+            </body>     
 	
+        <br>
+        <br>
+        <br>
+        <button type="button"><a href="index.html" target="blank"><font size="2" color=blue face=monaco>BACK TO HTML MENU</font></a></button>
 	</body>
 </html>
+
