--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main">
 
-      <h1> Ramya's <br>Interactive Media</h1>
+      <h1> Ramya's<br>Interactive Media</h1>
 
   <!-- Exercises 01 to 10-->
       
@@ -19,7 +19,7 @@
         <h2>Exercises</h2>
         <ul>
           <!-- Place your Arena URL in between the quotation works -->
-          <li><a href="  ">Exercise 1 &mdash; Weekly Arena Inspiration</a></li>
+          <li><a href="https://www.are.na/cca-interactive-2023/weekly-findings">Exercise 1 &mdash; Weekly Arena Inspiration</a></li>
 
           <li><a href="Exercises/Exercise-02/index.html">Exercise 2 &mdash; Inspector Sketches</a></li>
 
