--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main">
 
-      <h1> Ramya's<br>Interactive Media</h1>
+      <h1>Ramya's Interactive Media</h1>
 
   <!-- Exercises 01 to 10-->
       
