--- a/Projects/Project-01/index-3.html
+++ b/Projects/Project-01/index-3.html
@@ -26,7 +26,7 @@
                                 LLLLLLLLL        OOOOOOO   PP         EEEEEEEEE  RR     RR  AA     AA
 </pre></body>
         <br>
-<pre> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;🥐&nbsp;🇫🇷&nbsp;🥖</pre>
+<pre> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://factsaboutanything.com/croissant-facts/" target="blank">🥐</a>&nbsp;<a href="https://www.france.fr/fr" target="blank">🇫🇷</a>&nbsp;<a rel="click here" href="https://journeytofrance.com/facts-about-baguettes/" target="blank">🥖</a></pre>
 
         
 <body>
