--- a/Projects/Project-01/index-1.html
+++ b/Projects/Project-01/index-1.html
@@ -36,7 +36,7 @@
     SSSSSSSS   AA     AA   CCCCCCCC  RR     RR  EEEEEEEEE              CCCCCCCC   OOOOOOO   EEEEEEEEE   UUUUUUU   RR     RR
 
 </pre></body>
-<pre> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;🥐&nbsp;🇫🇷&nbsp;🥖</pre>
+<pre> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://factsaboutanything.com/croissant-facts/" target="blank">🥐</a>&nbsp;<a href="https://www.france.fr/fr" target="blank">🇫🇷</a>&nbsp;<a rel="click here" href="https://journeytofrance.com/facts-about-baguettes/" target="blank">🥖</a></pre>
         
         
 <body>
