--- a/Projects/Project-01/index-5.html
+++ b/Projects/Project-01/index-5.html
@@ -28,7 +28,7 @@
            
 </pre></body>
         <br>
-<pre>&nbsp; &nbsp; &nbsp; &nbsp;          &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;🥐&nbsp;🇫🇷&nbsp;🥖</pre>
+<pre>&nbsp; &nbsp; &nbsp; &nbsp;          &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://factsaboutanything.com/croissant-facts/" target="blank">🥐</a>&nbsp;<a href="https://www.france.fr/fr" target="blank">🇫🇷</a>&nbsp;<a rel="click here" href="https://journeytofrance.com/facts-about-baguettes/" target="blank">🥖</a></pre>
 
         
 <body>
