--- a/Projects/Project-01/index.html
+++ b/Projects/Project-01/index.html
@@ -12,8 +12,9 @@
         <div class="main"> </div>
         
         <h1><pre> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Welcome to Le</pre></h1>
-        <body>
-        <pre> 
+        <body> 
+        <pre>
+    
 
 	
                         PPPPPPPPPPPP           AA          RRRRRRRRRRR      IIIIIIIIIIIII     SSSSSSSSSSSS
@@ -45,7 +46,8 @@
                                             PP         LLLLLLLLL  AA     AA  NN     NN
                                             PP         LLLLLLLLL  AA     AA  NN     NN
 
-</pre></body>
+</pre>
+</body>
 
 <pre> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://factsaboutanything.com/croissant-facts/" target="blank">🥐</a>&nbsp;<a href="https://www.france.fr/fr" target="blank">🇫🇷</a>&nbsp;<a rel="click here" href="https://journeytofrance.com/facts-about-baguettes/" target="blank">🥖</a></pre>
  <body>
