--- a/Exercises/Exercise-05/index.html
+++ b/Exercises/Exercise-05/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Exercise 4</title>
+    <title>Exercise 5</title>
       <meta name="viewport" content="width=device-width,initial-scale=1"/>
   </head>
     
   <body>
-    <img length="43353px" src="Scroll.png" width="100%">
+    <img src="Scroll.png" width="100%">
   </body>
     
 </html>
