--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Projects</h2>
         <ul>
           <li><a href="Projects/Project-01/index.html" target="blank">Project 1 &mdash; All HTML</a></li>
-          <li>Project 2 &mdash; Web to Print</li>
+            <li><a href="Projects/Project-02/index.html" target="blank">Project 2 &mdash; Web to Print</a></li>
           <li>Project 3 &mdash; Gathering, a web zine</li>
         </ul>
       </div>
