--- a/Exercises/Exercise-09/index.html
+++ b/Exercises/Exercise-09/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+<html>
 	<head>
-	    <meta charset="UTF-8"> 
-	    <title>Breakpoints</title>
-	    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
+		<meta name=”viewport” content=”width=device-width, initial-scale=1”>
 	</head>
 
 	<body>
+		<div class="container">       
+        <span class="naruto">NARUTO</span>
+        <span class="kakashi">KAKASHI</span>
+        <span class="jiraiya">JIRAIYA</span>
+        </div>
 
-		<div class="container">
-			<div class="shape"></div>
-			<div class="shape"></div>
-			<div class="shape"></div>
-		</div>
-
+        
 	</body>
 </html>
