--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="Projects/Project-01/index.html" target="blank">Project 1 &mdash; All HTML</a></li>
             <li><a href="Projects/Project-02/index.html" target="blank">Project 2 &mdash; Web to Print</a></li>
-            <li><a href="Projects/Project-02/index.html" target="blank">Project 3 &mdash; Gathering, a web zine</a></li>
+            <li><a href="www.oranges.city" target="blank">Project 3 &mdash; Gathering, a web zine</a></li>
         </ul>
       </div>
 
