--- a/Projects/Project-02/index.html
+++ b/Projects/Project-02/index.html
@@ -22,6 +22,7 @@
     
 <body>
     <center> <h1>Recreating Raja Ravi Varma</h1> 
+        <p> Designed and Developed by Ramyatara Mullapudi</p>
     
     <div style="display: inline-block; margin-right: 20px;">
   <img src="Landing.png" style="max-width: 100%"> </div>
